fix: iphone date input vertical align

--- a/styles/project/components/_date-range-selector.scss
+++ b/styles/project/components/_date-range-selector.scss
@@ -10,7 +10,7 @@
 
   &__input {
     padding-left: 25px;
-    line-height: normal;
+    line-height: 100%;
   }
 
   &.hide-icon {
